[gd_scene load_steps=13 format=3 uid="uid://5l554qni0mw4"]

[ext_resource type="Script" path="res://Units/Scripts/unit.gd" id="1_g1crt"]
[ext_resource type="Script" path="res://Units/Scripts/range.gd" id="2_axanp"]
[ext_resource type="Script" path="res://Units/Scenes/unit_health.gd" id="3_lwmri"]
[ext_resource type="Script" path="res://Units/Scenes/mirror_stats.gd" id="3_qef8k"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jbjuf"]
albedo_color = Color(0.721291, 0.949681, 0.999497, 1)
metallic = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_nr37r"]
material = SubResource("StandardMaterial3D_jbjuf")

[sub_resource type="BoxShape3D" id="BoxShape3D_j8m6v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sqb5u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g8its"]
albedo_color = Color(0.86, 0.535637, 0.2322, 1)

[sub_resource type="PrismMesh" id="PrismMesh_loa3a"]
material = SubResource("StandardMaterial3D_g8its")
size = Vector3(0.2, 1, 0.1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbju5"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_noawi"]
viewport_path = NodePath("Unit/health/SubViewport")

[node name="mirror" type="Node3D"]

[node name="Unit" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_g1crt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Unit"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = SubResource("BoxMesh_nr37r")

[node name="mesh_collision" type="CollisionShape3D" parent="Unit"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_j8m6v")
disabled = true

[node name="Area3D" type="Area3D" parent="Unit"]
input_ray_pickable = false

[node name="enemy_collision" type="CollisionShape3D" parent="Unit/Area3D"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
shape = SubResource("BoxShape3D_sqb5u")
disabled = true

[node name="Range" type="Node3D" parent="Unit"]
script = ExtResource("2_axanp")

[node name="Area3D" type="Area3D" parent="Unit/Range"]
input_ray_pickable = false

[node name="direct_indicator" type="MeshInstance3D" parent="Unit"]
transform = Transform3D(-0.00215161, 0.400374, -3.8444e-10, 0.00892082, 7.65061e-06, -1.66335, -1.00218, -0.000859507, -0.0148061, 0.5187, 0, -2.26731e-08)
mesh = SubResource("PrismMesh_loa3a")

[node name="health" type="Node3D" parent="Unit"]
script = ExtResource("3_lwmri")

[node name="SubViewport" type="SubViewport" parent="Unit/health"]
disable_3d = true
transparent_bg = true

[node name="health_bar" type="ProgressBar" parent="Unit/health/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -13.5
offset_right = 108.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tbju5")
step = 1.0
value = 100.0
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="Unit/health"]
transform = Transform3D(-1.6995e-08, 0, -1, 0, 0.315, 0, 0.3888, 0, -4.37114e-08, 0, 0.36594, 0)
billboard = 1
texture = SubResource("ViewportTexture_noawi")

[node name="heal_colour" type="Timer" parent="Unit/health"]
wait_time = 0.3
one_shot = true

[node name="Stats" type="Node3D" parent="."]
script = ExtResource("3_qef8k")

[connection signal="body_entered" from="Unit/Area3D" to="Unit" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Unit/Range/Area3D" to="Unit" method="body_entered_attack_range"]
[connection signal="timeout" from="Unit/health/heal_colour" to="Unit/health" method="_on_heal_colour_timeout"]
